--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -34,6 +34,7 @@
   <script src="js/jquery.fittext.js"></script>
   <script src="js/magnific-popup.js"></script>
   <script src="js/init.js"></script>
+  <script src="https://use.fontawesome.com/eb2a461f09.js"></script>
 
 </body>
 
