--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -35,6 +35,7 @@
   <script src="js/magnific-popup.js"></script>
   <script src="js/init.js"></script>
   <script src="https://use.fontawesome.com/eb2a461f09.js"></script>
+  <script type="text/javascript" src="../build/static/js/main.6b9a4068.js"></script>
 
 </body>
 
